// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should be auto dismissable 1`] = `
<div>
  <div
    class="junipero alerts"
  >
    <div
      class="junipero alert"
    >
      <div
        class="junipero card"
      >
        <div
          class="content"
        >
          <h6
            class="junipero"
          >
            Title
          </h6>
          <div
            class="junipero secondary"
          >
            Content
          </div>
        </div>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should be auto dismissable 2`] = `
<div>
  <div
    class="junipero alerts"
  />
</div>
`;

exports[`<Alert /> should render 1`] = `
<div>
  <div
    class="junipero alert"
  >
    <div
      class="junipero card"
    >
      <div
        class="content"
      >
        <h6
          class="junipero"
        >
          Title
        </h6>
        <div
          class="junipero secondary"
        >
          Content
        </div>
      </div>
      <svg
        class="junipero icon remove"
        height="10"
        viewBox="0 0 9 10"
        width="10"
      >
        <path
          d="M8 1.5L1 8.5"
        />
        <path
          d="M1 1.5L8 8.5"
        />
      </svg>
    </div>
  </div>
</div>
`;
